chromeos: Fix find bar focus after Ctrl-F under mash

Pressing Ctrl-F creates a widget for DropdownBarHost and a textfield
for the text entry view. The view requests focus, which calls into
DesktopNativeWidgetAura::ClearNativeFocus() to return focus to the
active widget's contents aura::Window.

There's a special code path in FocusController for this case. However,
the existing window service code in //services/ws was always using
FocusController::FocusWindow() to maintain its version of focus.
That code path blocks focusing a parent when a child is focused, see
https://codereview.chromium.org/11519040

Instead, allow the window service to ResetFocusWithinActiveWindow()
in this case, similar to what the client is doing.

This fixes both Mash and SingleProcessMash. It also fixes a similar
issue with Ctrl-L and omnibox focus.

Bug: 880533
Change-Id: Iaa3132d7e32b96bf2ad33f781f6696ec9c88218d
Reviewed-on: https://chromium-review.googlesource.com/1205498
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588984}
Former-commit-id: 0579d8397d8b21434b16b739c9cfa7a572160af8